# llama-pg

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  cmd.sh  docker-compose-dev.yml  docker-compose.yml  entrypoint.sh  healthcheck.sh  index.yaml  init_psql.sql  pyproject.toml  requirements.txt
.github/workflows/: continuous-integration.yaml  helm-release.yaml  release.yaml
frontend/: Dockerfile  Dockerfile.dev  entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  axios.ts  index.css  vite-env.d.ts
frontend/src/assets/: LlamaLogo.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: use-organization.ts  use-project.ts  use-query.ts
frontend/src/layouts/: layout.tsx
frontend/src/lib/: auth.ts  blob.ts  utils.ts
frontend/src/pages/: dashboard.tsx  documents.tsx  landing.tsx  login.tsx  project-documents.tsx  projects.tsx  rag.tsx  search.tsx  signup.tsx  user-org.tsx  user.tsx
frontend/src/types/: api.types.ts  auth.types.ts  dashboard.types.ts  document.types.ts  org.types.ts  project.types.ts  search.types.ts  user.types.ts
k8s/charts/llama-pg/: Chart.yaml  values.yaml
src/: api.py  auth.py  configuration.py  constant.py  database.py  depedency.py  lp_client.py  main.py  pgai_client.py  server.py  utils.py  worker.py  worker_client.py  worker_main.py
src/endpoints/: document.py  project.py  retreival.py  system.py  user.py
src/models/: document.py  models.py  pagination.py  project.py  retreival.py  system.py  user.py
(+54 files in other folders)
