[project]
name = "llama-pg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arq==0.26.3",
    "bcrypt>=5.0.0",
    "fastapi==0.110.1",
    "llama-cloud-services>=0.6.76",
    "loguru==0.7.3",
    "numpy==2.2.6",
    "openai==1.82.1",
    "pgai[vectorizer-worker]>=0.12.1",
    "psycopg-pool==3.2.6",
    "psycopg2-binary==2.9.9",
    "python-multipart>=0.0.20",
    "uvicorn==0.29.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]
